# Coding-Challenge

./: .gitignore  README.md
compressionTool/: compress.py  compressUsingInterfaces.py  test.txt
cut/: cut.py
go/: ccwc  go.mod  main.go
go/jsonParser/: go.mod  main.go
jsonParser/: jsonParser.py
loadBalancer/: backendServer.py  config.json  main.py  roundRobinLoadBalancer.py  runBackendServers.py
py/compressionTool/: compress.py  compressUsingInterfaces.py  test.txt
py/cut/: cut.py
py/jsonParser/: jsonParser.py
py/loadBalancer/: config.json  roundRobinLoadBalancer.py
py/redis/: main.py
py/wordCounter/: ccwc.py
redis/: main.py
rust/compression_tool/: Cargo.toml  test.txt  test_small.txt
rust/compression_tool/src/: main.rs
rust/cut/: Cargo.toml
rust/cut/src/: main.rs
rust/load_balancer/: Cargo.toml  index.html
rust/load_balancer/src/: lib.rs  main.rs  server.rs
rust/redis_server/: Cargo.toml
rust/wc/: Cargo.toml
rust/wc/src/: cli.rs  file_io.rs  main.rs  text_processing.rs
rust/web_server/src/: main.rs
threadpoolExecutor/: main.py
wordCounter/: ccwc.py
