[package]
name = "compression_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "2.2.0"
clap = { version = "4.5.0", features = ["cargo"] }
serde = "1.0.196"
unicode-segmentation = "1.11.0"
serde_json = { version = "1.0.113", features = [] }
